--- a/index.html
+++ b/index.html
@@ -10,18 +10,16 @@
     <h1>Pangolin</h1>
     <nav role="navigation">
       <ul>
-        <li><a href="#">Description</a></li>
-        <li><a href="#">Behaviour</a></li>
-        <li><a href="#">Conservation</a></li>
+        <li><a href="#description">Description</a></li>
+        <li><a href="#behaviour">Behaviour</a></li>
+        <li><a href="#conservation">Conservation</a></li>
       </ul>
     </nav>
   </header>
   <main role="main">
     <img src="images/pangolin.jpg" alt="">
   </main>
-  <section>
-
-
+  <section id="description">
   <h2>Description</h2>
     <h3>Some countries where pangolins are found</h3>
     <ul>
@@ -35,9 +33,17 @@
       <li>Zambia</li>
       <li>Zimbabwe</li>
     </ul>
+  </section>
+  <section id="behaviour">
       <h2>Behaviour</h2>
-
-
-
+      <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior"aria-label="Read more about Pangolin behaviour">Read more</a>
+  </section
+  <section id="conservation">
+<h2>Conservation</h2>
+<a href="https://en.wikipedia.org/wiki/Pangolin#Conservation"aria-label="Read more about Pangolin conservation">Read more</a>
+</section>
+<footer role="contentinfo">
+  <small>© 1821 Pangolin</small>
+</footer>
   </body>
   </html>
