fix section tag

--- a/index.html
+++ b/index.html
@@ -20,30 +20,30 @@
     <img src="images/pangolin.jpg" alt="">
   </main>
   <section id="description">
-  <h2>Description</h2>
+    <h2>Description</h2>
     <h3>Some countries where pangolins are found</h3>
     <ul>
       <li>Botswana</li>
       <li>Kenya</li>
       <li>Mozambique</li
-      <li>Namibia</li>
-      <li>South Africa</li>
-      <li>Tanzania</li>
-      <li>Uganda</li>
-      <li>Zambia</li>
-      <li>Zimbabwe</li>
-    </ul>
-  </section>
-  <section id="behaviour">
+        <li>Namibia</li>
+        <li>South Africa</li>
+        <li>Tanzania</li>
+        <li>Uganda</li>
+        <li>Zambia</li>
+        <li>Zimbabwe</li>
+      </ul>
+    </section>
+    <section id="behaviour">
       <h2>Behaviour</h2>
       <a href="https://en.wikipedia.org/wiki/Pangolin#Behavior"aria-label="Read more about Pangolin behaviour">Read more</a>
-  </section
-  <section id="conservation">
-<h2>Conservation</h2>
-<a href="https://en.wikipedia.org/wiki/Pangolin#Conservation"aria-label="Read more about Pangolin conservation">Read more</a>
-</section>
-<footer role="contentinfo">
-  <small>© 1821 Pangolin</small>
-</footer>
-  </body>
-  </html>
+      </section
+      <section id="conservation"
+        <h2>Conservation</h2>
+        <a href="https://en.wikipedia.org/wiki/Pangolin#Conservation"aria-label="Read more about Pangolin conservation">Read more</a>
+      </section>
+      <footer role="contentinfo">
+        <small>© 1821 Pangolin</small>
+      </footer>
+    </body>
+    </html>
