--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <ul>
       <li>Botswana</li>
       <li>Kenya</li>
-      <li>Mozambique</li
-        <li>Namibia</li>
-        <li>South Africa</li>
-        <li>Tanzania</li>
-        <li>Uganda</li>
-        <li>Zambia</li>
-        <li>Zimbabwe</li>
+      <li>Mozambique</li>
+      <li>Namibia</li>
+      <li>South Africa</li>
+      <li>Tanzania</li>
+      <li>Uganda</li>
+      <li>Zambia</li>
+      <li>Zimbabwe</li>
       </ul>
     </section>
     <section id="behaviour">
