fix pangolin name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
   <main role="main">
-    <img src="images/pangolin.jpg" alt="pagonlin">
+    <img src="images/pangolin.jpg" alt="pangolin">
   </main>
   <section id="description">
     <h2>Description</h2>
